完成登录认证

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 app.id=auto_transaction
 server.port = 8864
+
+web.security.repository.secret=3s)ad5sad4        
+web.security.repository.cookieName=auth_token
+#web.security.repository.cookieDomain=.liuli.com
+web.security.repository.expirationTime=86400
+web.security.repository.redisKeyPrefix=auto_transaction_
