添加部分代码

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,14 @@
 app.id=auto_transaction
 server.port = 8864
 
+spring.datasource.driver=com.mysql.jdbc.Driver
+spring.datasource.jdbcUrl=jdbc:mysql://120.79.248.235:3306/investment?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.maximum-pool-size=20
+spring.datasource.username=liuli
+spring.datasource.password=19952668Las
+mybatis.configuration.map-underscore-to-camel-case=true 
+
+
 web.security.repository.secret=3s)ad5sad4        
 web.security.repository.cookieName=auth_token
 #web.security.repository.cookieDomain=.liuli.com
