--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,13 @@ web.security.repository.cookieName=auth_token
 #web.security.repository.cookieDomain=.liuli.com
 web.security.repository.expirationTime=86400
 web.security.repository.redisKeyPrefix=auto_transaction_
+
+
+
+spring.mail.host=smtp.qq.com
+spring.mail.port=25
+spring.mail.username=164884173@qq.com
+spring.mail.password=qpeswauewksccajb
+spring.mail.default-encoding=UTF-8
+spring.mail.properties.mail.smtp.socketFactoryClass=javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.debug=true
