添加网络代理

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 app.id=auto_transaction
 server.port = 8864
 
+# ˝æ›ø‚≈‰÷√
 spring.datasource.driver=com.mysql.jdbc.Driver
 spring.datasource.jdbcUrl=jdbc:mysql://120.79.248.235:3306/investment?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.maximum-pool-size=20
@@ -9,6 +10,7 @@ spring.datasource.password=19952668Las
 mybatis.configuration.map-underscore-to-camel-case=true 
 
 
+#springSecurity≈‰÷√
 web.security.repository.secret=3s)ad5sad4        
 web.security.repository.cookieName=auth_token
 #web.security.repository.cookieDomain=.liuli.com
@@ -16,7 +18,7 @@ web.security.repository.expirationTime=86400
 web.security.repository.redisKeyPrefix=auto_transaction_
 
 
-
+#” œ‰≈‰÷√
 spring.mail.host=smtp.qq.com
 spring.mail.port=25
 spring.mail.username=164884173@qq.com
@@ -24,3 +26,7 @@ spring.mail.password=qpeswauewksccajb
 spring.mail.default-encoding=UTF-8
 spring.mail.properties.mail.smtp.socketFactoryClass=javax.net.ssl.SSLSocketFactory
 spring.mail.properties.mail.debug=true
+
+
+#◊‘∂®“Â≈‰÷√
+autoTransaction.web.enableProxy=true
